--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Babel==2.8.0
 baidu-aip==2.2.18.0
 binwalk==2.2.0
 constantly==15.1.0
@@ -14,8 +13,7 @@ networkx==2.4
 numpy==1.18.3
 psutil==5.7.0
 py==1.8.1
-PyAudio==0.2.11
-pycrypto==2.6.1
+pycryptodome==3.9.7
 pyelftools==0.26
 PyNaCl==1.3.0
 PyQt5==5.14.2
