--- a/MainApp/CMakeLists.txt
+++ b/MainApp/CMakeLists.txt
@@ -10,6 +10,8 @@ set(MainApp_SRCS
     Resources.qrc
     menubutton.cpp
     menubutton.h
+    monitor.cpp
+    monitor.h
     about.cpp
     about.h
     about.ui
@@ -18,8 +20,9 @@ set(MainApp_SRCS
 add_executable(MainApp ${MainApp_SRCS})
 
 target_link_libraries(MainApp PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
-target_link_libraries(MainApp PRIVATE qtadvanceddocking)
+target_link_libraries(MainApp PRIVATE qtadvanceddocking QCodeEditor)
 target_include_directories(MainApp PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../Library/QtAds")
+target_include_directories(MainApp PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../Library/QCodeEditor")
 set_target_properties(MainApp PROPERTIES 
     AUTOMOC ON
     AUTORCC ON
