--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.12)
 PROJECT(ISAE) 
 add_subdirectory(Library)
 add_subdirectory(MainApp)
+add_subdirectory(Plugins)
