--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -6,8 +6,20 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(ISAEUtils_SRCS
     isaeutils.cpp
     isaeutils.h
-)
+        ISAEPluginWidget.cpp ISAEPluginWidget.h)
 
 add_library(isaeutils STATIC ${ISAEUtils_SRCS})
+
+set_target_properties(isaeutils PROPERTIES
+        AUTOMOC ON
+        AUTORCC ON
+        AUTOUIC ON
+        CXX_STANDARD 17
+        CXX_STANDARD_REQUIRED ON
+        CXX_EXTENSIONS ON
+        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)
 
 target_link_libraries(isaeutils PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
