add Editor and FileManager

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets)
-find_package(KF5TextEditor)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(MainApp_SRCS
         main.cpp
@@ -23,14 +22,24 @@ qt5_add_resources(RESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/../resources/app.qrc")
 
 add_executable(MainApp ${MainApp_SRCS} ${RESOURCES})
 
-target_link_libraries(MainApp PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets KF5::TextEditor)
-target_link_libraries(MainApp PRIVATE qtadvanceddocking nodes ExtensionSystem RxWidgets isaeutils)
+target_link_libraries(MainApp PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
+target_link_libraries(MainApp PRIVATE
+        qtadvanceddocking
+        nodes
+        ExtensionSystem
+        RxWidgets
+        isaeutils
+        FileManager
+        Editor
+        )
 
 target_include_directories(MainApp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../libs/advanceddockingsystem"
-                                          "${CMAKE_CURRENT_SOURCE_DIR}/../libs/nodeeditor"
+        "${CMAKE_CURRENT_SOURCE_DIR}/../libs/nodeeditor"
         "${CMAKE_CURRENT_SOURCE_DIR}/../libs/extensionsystem"
         "${CMAKE_CURRENT_SOURCE_DIR}/../libs/rxwidgets"
-        "${CMAKE_CURRENT_SOURCE_DIR}/../libs/utils")
+        "${CMAKE_CURRENT_SOURCE_DIR}/../libs/utils"
+        "${CMAKE_CURRENT_SOURCE_DIR}/../extensions/filemanager"
+        "${CMAKE_CURRENT_SOURCE_DIR}/../extensions/editor")
 
 set_target_properties(MainApp PROPERTIES
     AUTOMOC ON
