--- a/src/libs/CMakeLists.txt
+++ b/src/libs/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(extensionsystem)
 add_subdirectory(nodeeditor)
 add_subdirectory(rxwidgets)
 add_subdirectory(utils)
+add_subdirectory(qterm)
