--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,26 @@
-baidu-aip==2.2.18.0
-constantly==15.1.0
-contextlib2==0.6.0.post1
-cryptography==2.9.2
-future==0.18.2
-gmpy2==2.1.0b4
-html5lib==1.0.1
-htmlmin==0.1.12
-isort==4.3.21
-networkx==2.4
-numpy>=1.18.3
-psutil==5.7.0
-py==1.8.1
-pycryptodome==3.9.7
-pyelftools==0.26
-PyQt5==5.14.2
-PyQt5-sip==12.7.2
-PyQtWebEngine==5.14.0
-pyserial==3.4
-PySocks==1.7.1
-python-jsonrpc-server==0.3.4
-python-poppler-qt5==0.75.0
-QtPy==1.9.0
-requests==2.23.0
-six==1.14.0
-tldr==0.5
-urllib3==1.25.9
-w3lib==1.21.0
-webencodings==0.5.1
+constantly
+contextlib2
+cryptography
+future
+gmpy2
+html5lib
+htmlmin
+isort
+networkx
+numpy
+psutil
+py
+pycryptodome
+pyelftools
+pyserial
+PySocks
+python-jsonrpc-server
+QtPy
+PyQt5
+PyQtWebEngine
+requests
+six
+tldr
+urllib3
+w3lib
+webencodings
